# tinker-rl-lab

./: .env.example  .gitignore  ARTIFACT.md  CHANGELOG.md  CITATION.cff  Dockerfile  FINAL_HANDOFF.md  INTEGRATION_LOG.md  LIMITATIONS_AND_IMPACT.md  NEURIPS_CHECKLIST_FINAL.md  README.md  REPRODUCE.md  abstract_scope_audit.py  anonymization_repro_audit.py  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_config_audit.py  autoresearch_runnability.sh  blind_review_export_audit.py  blind_review_package_audit.py  capstone_claim_audit.py  claim_strength_audit.py  export_guard_audit.py  group6_final_report_with_appended_paper.aux  group6_final_report_with_appended_paper.fdb_latexmk  group6_final_report_with_appended_paper.fls  group6_final_report_with_appended_paper.out  group6_final_report_with_appended_paper.toc  grpo_100_math.py  grpo_100_synthetic.py  grpo_100_xlam.py  grpo_exp_a_baseline.py  grpo_exp_b_high_lr.py  grpo_exp_c_low_temp.py  grpo_exp_d_xlam.py  grpo_gsm8k_base.py  grpo_tooluse_tinker.py  grup6_final_report_with_appended_paper.aux  (+18 more)
.codex/: README.md
.codex/agents/: explorer.toml  reviewer.toml  worker.toml
.github/workflows/: ci.yml
ai-scientist-v2-integration/: README.md  bfts_config.yaml  launch.sh  patch.sh
blind_review/: .gitignore  AUDIT.md  SUBMISSION_MANIFEST.md  anonymize_code.py  anonymize_paper.py
demo_recording/: README.md  concat.txt  concat_v2.txt  concat_v3.txt
experiments/: CHANGELOG.md  base_instruct_paired.py  bfclv4_tool_use.py  compute_statistics.py  group_size_token_normalized.py  master_results.csv  master_results.json  render_stat_rigor_tex.py  stat_rigor_tables.json  statistical_analysis.json  statistical_analysis.md  stratified_heldout.py  survival_analysis.py  tool_use_reward_analysis.py  variance_mitigation_integration.py
experiments/_archive/: ppo_qwen3-8b_superseded_2026-04-19.json  removed_duplicates_2026-04-19.json
experiments/framework_config_dumps/: README.md  openrlhf_qwen3_8b_gsm8k.yaml  tinker_qwen3_8b_gsm8k.yaml  trl_qwen3_8b_gsm8k.yaml  verl_qwen3_8b_gsm8k.yaml
experiments/modal/: modal_grpo_openrlhf.py  modal_grpo_verl.py  modal_heldout_eval.py
experiments/results/: aggregate_framework_comparison.py  base_instruct_paired.tsv  bfclv4_tool_use.tsv  framework_comparison.json  group_size_token_normalized.tsv  heldout_gsm8k.json  heldout_stratified.tsv  plot_framework_comparison.py  statistical_rigor_report.tsv  survival_analysis.tsv  tool_code_reward_diagnostics.tsv  variance_mitigation.tsv  zvf_partial_correlations.tsv
experiments/tinker-runs/: wave6_ablations.py  wave6_resume.py
experiments/tool_use_zvf_sweep/: cost_estimate.py  gen_configs.py  manifest.tsv  results_to_tex.py  run_sweep.py
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
openrlhf/: __init__.py  trainer.py
paper/: .gitignore  FIGURES.tex  FIGURE_AUDIT.md  ethics_statement.tex  ethics_statement_anon.tex  ethics_wrapper.tex  expected_results.json  main.aux  main.bbl  main.blg  main.out  main.tex  main_anon.aux  main_anon.blg  main_anon.out  main_anon.tex  references.bib  reviewer_points.yaml
paper/bib_fragments/: extended_rw.bib  variance_mitigation.bib
paper/figures/: gen_figures.py  generate_figures.py  wave6_sensitivity.py
paper/sections/: abstract.tex  abstract_anon.tex  appendix_zvf_formalization.tex  base_vs_instruct_paired.tex  checklist.tex  checklist_anon.tex  conclusion.tex  conclusion_anon.tex  extended_related_work.tex  figures_regeneration_note.tex  framework_configs_appendix.tex  frontier_scope_clarification.tex  group_size_reconcile.tex  heldout_stratified.tex  intro.tex  intro_anon.tex  related_work_v2_anon.tex  stat_rigor_updates.tex  stat_rigor_updates_anon.tex  statistical_rigor_addendum.tex  tool_use_code_expanded.tex  variance_mitigation_comparison.tex  zvf_counterfactual_appendix.tex  zvf_pipeline_spec.tex
reports/final/: README.md  build_group6_final_report.sh  capstone_final_report.docx  capstone_final_report.md  group6_experiment_coverage_addendum.tex  group6_final_report.docx  group6_final_report.tex  group6_final_report_with_appended_paper.tex  grpo_agentic_llm_paper.aux  grpo_agentic_llm_paper.bbl  grpo_agentic_llm_paper.blg  grpo_agentic_llm_paper.fdb_latexmk  grpo_agentic_llm_paper.fls  grpo_agentic_llm_paper.tex  grpo_agentic_llm_paper_anonymous.aux  grpo_agentic_llm_paper_anonymous.blg  grpo_agentic_llm_paper_anonymous.fdb_latexmk  grpo_agentic_llm_paper_anonymous.fls  grpo_agentic_llm_paper_anonymous.out  grpo_agentic_llm_paper_anonymous.tex  grup6_extracted.txt  grup6_final_report_with_appended_paper.tex  references.bib  supplementary_appendix.aux  supplementary_appendix.bbl  supplementary_appendix.blg  supplementary_appendix.fdb_latexmk  (+3 more)
reproducibility/: check_qwen3_8b_claim.py  qwen3_8b_claim_check.json
scripts/: _reviewer_points_extract.py  build_submission.py  hyperparam_sensitivity.py  integration_audit.py  partial_correlation_zvf.py  regenerate_figures.py  regenerate_missing_figures.py  reviewer_response_score.sh  smoke_test.sh  statistical_rigor_report.py  weave_addendum.py  zvf_compute_cross_framework.py
tests/: test_experiments.py  test_seed.py  test_stats.py
utils/: seed.py  stats.py  verify_results.py
verl/: __init__.py  trainer.py
(+38 files in other folders)
